# waitress

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  CONTRIBUTORS.txt  DIFFERENCES.txt  HACKING.txt  HISTORY.txt  MANIFEST.in  README.rst  README.txt  RELEASING.txt  TODO.txt  appveyor.yml  bootstrap.py  buildout.cfg  contributing.md  pyproject.toml  rtd.txt  setup.cfg  setup.py  signals_example.py  test.ini  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-tests.yml  ci-windows.yml
docs/: Makefile  api.rst  arguments.rst  conf.py  design.rst  differences.rst  filewrapper.rst  glossary.rst  index.rst  logging.rst  rebuild  reverse-proxy.rst  runner.rst  socket-activation.rst  usage.rst
src/waitress/: __init__.py  adjustments.py  buffers.py  channel.py  compat.py  observability.py  parser.py  proxy_headers.py  receiver.py  runner.py  server.py  signals.py  task.py  trigger.py  utilities.py  wasyncore.py
src/zope/server/: __init__.py  adjustments.py  buffers.py  dualmodechannel.py  fixedstreamreceiver.py  maxsockets.py  serverbase.py  serverchannelbase.py  taskthreads.py  utilities.py
src/zope/server/ftp/: README.txt  logger.py  publisher.py  server.py
src/zope/server/ftp/tests/: demofs.py  fstests.py  test_demofs.py  test_ftpserver.py  test_publisher.py
src/zope/server/http/: chunking.py  commonaccesslogger.py  httprequestparser.py  httpserver.py  httpserverchannel.py  httptask.py  publisherhttpserver.py  wsgihttpserver.py
src/zope/server/http/tests/: test_commonaccesslogger.py  test_httpdate.py  test_httprequestparser.py  test_httpserver.py  test_wsgiserver.py  wsgi_app.py
src/zope/server/interfaces/: __init__.py  ftp.py
src/zope/server/linereceiver/: linecommandparser.py  lineserverchannel.py  linetask.py
src/zope/server/logger/: filelogger.py  pythonlogger.py  resolvinglogger.py  rotatingfilelogger.py  socketlogger.py  sysloglogger.py  taillogger.py  unresolvinglogger.py
src/zope/server/logger/tests/: test_pythonlogger.py
src/zope/server/tests/: asyncerror.py  test_serverbase.py  test_zombies.py
tests/: test_adjustments.py  test_buffers.py  test_channel.py  test_compat.py  test_functional.py  test_init.py  test_parser.py  test_proxy_headers.py  test_receiver.py  test_regression.py  test_runner.py  test_server.py  test_task.py  test_trigger.py  test_utilities.py  test_wasyncore.py
tests/fixtureapps/: echo.py  error_traceback.py  filewrapper.py  getline.py  nocl.py
waitress/: __init__.py  __main__.py  adjustments.py  asyncore_epoll.py  buffers.py  channel.py  compat.py  dispatcher.py  dualmodechannel.py  fixedstreamreceiver.py  interfaces.py  parser.py  proxy_headers.py  receiver.py  rfc7230.py  runner.py  server.py  serverbase.py  serverchannelbase.py  task.py  taskthreads.py  trigger.py  utilities.py  wasyncore.py  zlogintegration.py
waitress/ftp/: README.txt  logger.py  publisher.py  server.py
waitress/ftp/tests/: demofs.py  fstests.py  test_ftpserver.py  test_publisher.py
waitress/http/: chunking.py  commonaccesslogger.py  http_date.py  httprequestparser.py  httpserver.py  httpserverchannel.py  httptask.py  publisherhttpserver.py  wsgihttpserver.py
waitress/http/tests/: test_commonaccesslogger.py  test_httpdate.py  test_httprequestparser.py  test_httpserver.py  test_wsgiserver.py  wsgi_app.py
waitress/interfaces/: logger.py
waitress/linereceiver/: linecommandparser.py  lineserverchannel.py  linetask.py
waitress/logger/: filelogger.py  m_syslog.py  pythonlogger.py  resolvinglogger.py  rotatingfilelogger.py  socketlogger.py  sysloglogger.py  taillogger.py  unresolvinglogger.py
waitress/logger/tests/: test_pythonlogger.py
waitress/tests/: support.py  test_adjustments.py  test_buffers.py  test_channel.py  test_compat.py  test_dualmodechannel.py  test_fixedstreamreceiver.py  test_functional.py  test_init.py  test_integration.py  test_parser.py  test_proxy_headers.py  test_receiver.py  test_regression.py  test_runner.py  test_server.py  test_serverbase.py  test_task.py  test_trigger.py  test_utilities.py  test_wasyncore.py  test_zombies.py
waitress/tests/fixtureapps/: badcl.py  echo.py  error.py  filewrapper.py  getline.py  nocl.py  sleepy.py  slow.py  toolarge.py  writecb.py
